--- a/os/brain/manifest.json
+++ b/os/brain/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "BRAIN",
   "short_name": "BRAIN",
-  "start_url": ".",
+  "start_url": "./index.html",
   "display": "standalone",
   "background_color": "#020c16",
   "theme_color": "#020c16",
